# Tanmalaka

./: .gitignore  IDENTITY.md  README.md  USER.md
memory/: 2026-04-17.md
polymarket-terminal-rust/: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
polymarket-terminal-rust/src/: config.rs  lib.rs  main.rs
polymarket-terminal-rust/src/clob/: auth.rs  mod.rs  types.rs
polymarket-terminal-rust/src/market/: detector.rs  types.rs
polymarket-terminal-rust/src/onchain/: ctf.rs  mod.rs
polymarket-terminal-rust/src/strategy/: conviction.rs  executor.rs  mod.rs  position.rs
polymarket-terminal-rust/src/tui/: mod.rs
polymarket-terminal-rust/src/ws/: fills.rs  mod.rs  orderbook.rs  price.rs
