[package]
name = "polymarket-maker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "maker"
path = "src/main.rs"

[[bin]]
name = "conviction"
path = "src/bin/conviction.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
ureq = { version = "2", features = ["json", "tls"] }

# Serialization
serde = { version = "=1.0.213", features = ["derive"] }
serde_json = "1"

# Ethereum / EVM
alloy = { version = "0.9", features = [
    "signer-local",
    "provider-http",
    "contract",
    "sol-types",
    "rpc-types",
    "eips",
    "network",
] }

# Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Crypto / encoding
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
rand = "0.8"

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
url = "2"
